# venom-rs

./: Cargo.toml  README.md
generate_shellcode/src/: bootstrap.asm  main.rs  pe.rs  pe_utils.rs
hash_calculate/: Cargo.toml
hash_calculate/src/: main.rs
hash_calculator/src/: main.rs
inject/: Cargo.toml
inject/src/: load_library.rs  main.rs  pe_utils.rs
loader/: Cargo.toml
loader/src/: loader.rs  main.rs
payload/: Cargo.toml
payload/src/: lib.rs
reflective_loader/: Cargo.toml
reflective_loader/src/: lib.rs  loader.rs
testdll/src/: lib.rs
